--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,9 +1,11 @@
-FROM golang:latest 
+FROM golang:latest
 
 RUN go get github.com/gin-gonic/gin
 RUN go get github.com/mattn/go-sqlite3
 RUN go get github.com/go-sql-driver/mysql
 
-ADD ./src/api /go/src/api 
-RUN go install api 
+ADD ./src/api /go/src/api
+RUN rm -r /go/bin/
+RUN go build api
+RUN go install api
 CMD ["api"]
